# ml-alpha-lab

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: azure_ml_trigger.yml  backtest_weekly.yml  ci.yml
configs/: azure_config.yaml  backtest_config.yaml  model_config.yaml  strategy_config.yaml
infrastructure/: azure_ml_pipeline.py  azure_setup.sh  budget_alerts.py
notebooks/: 01_data_exploration.ipynb
src/: __init__.py
src/backtesting/: __init__.py  backtest_engine.py  capacity_analysis.py  performance_metrics.py  report_generator.py  vectorized_backtest.py
src/costs/: __init__.py  cost_decomposition.py  market_impact.py  transaction_costs.py
src/data/: __init__.py  data_cleaner.py  data_loader.py  data_validator.py
src/ensemble/: __init__.py  stacking.py  weighted_ensemble.py
src/execution/: __init__.py  execution_benchmarks.py  execution_quality.py  fill_simulator.py
src/features/: __init__.py  cross_sectional.py  feature_pipeline.py  regime.py  statistical.py  technical.py
src/microstructure/: __init__.py  liquidity_analysis.py  order_book_sim.py  spread_model.py
src/models/: __init__.py  base_model.py  lightgbm_model.py  lstm_model.py  model_registry.py  rl_agent.py  transformer_model.py  xgboost_model.py
src/portfolio/: __init__.py  black_litterman.py  capital_allocation.py  mean_variance.py  (+2 more)
tests/: test_backtesting.py  test_costs.py  test_data.py  test_features.py  test_models.py  test_no_lookahead.py  test_portfolio.py  test_signals.py  test_statistics.py
(+17 files in other folders)
